syntax = "proto3";

option go_package = "github.com/Sokol111/category-service/proto";

import "google/protobuf/empty.proto";

package proto;

message CreateCategoryRequest {
  string name = 1;
  bool enabled = 2;
}

message CategoryResponse {
  string id = 1;
  string name = 2;
  uint64 version = 3;
  bool enabled = 4;
  string created_date = 5;
  string last_modified_date = 6;
}

message GetCategoryByIdRequest {
  string id = 1;
}

message GetCategoryByNameRequest {
  string name = 1;
}

message UpdateCategoryRequest {
  string id = 1;
  string name = 2;
  uint64 version = 3;
  bool enabled = 4;
}

message CategoryListResponse {
  repeated CategoryResponse categories = 1;
}

service CategoryService {
  rpc CreateCategory (CreateCategoryRequest) returns (CategoryResponse);

  rpc GetCategoryById (GetCategoryByIdRequest) returns (CategoryResponse);

  rpc GetCategoryByName (GetCategoryByNameRequest) returns (CategoryResponse);

  rpc UpdateCategory (UpdateCategoryRequest) returns (CategoryResponse);

  rpc GetCategories (google.protobuf.Empty) returns (CategoryListResponse);
}
